; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kvm/extr_x86.c_emulator_read_emulated.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kvm/extr_x86.c_emulator_read_emulated.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.x86_emulate_ctxt = type { i32 }
%struct.x86_exception = type { i32 }

@read_emultor = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.x86_emulate_ctxt*, i64, i8*, i32, %struct.x86_exception*)* @emulator_read_emulated to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @emulator_read_emulated(%struct.x86_emulate_ctxt* %0, i64 %1, i8* %2, i32 %3, %struct.x86_exception* %4) #0 {
  %6 = alloca %struct.x86_emulate_ctxt*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.x86_exception*, align 8
  store %struct.x86_emulate_ctxt* %0, %struct.x86_emulate_ctxt** %6, align 8
  store i64 %1, i64* %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store %struct.x86_exception* %4, %struct.x86_exception** %10, align 8
  %11 = load %struct.x86_emulate_ctxt*, %struct.x86_emulate_ctxt** %6, align 8
  %12 = load i64, i64* %7, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = load i32, i32* %9, align 4
  %15 = load %struct.x86_exception*, %struct.x86_exception** %10, align 8
  %16 = call i32 @emulator_read_write(%struct.x86_emulate_ctxt* %11, i64 %12, i8* %13, i32 %14, %struct.x86_exception* %15, i32* @read_emultor)
  ret i32 %16
}

declare dso_local i32 @emulator_read_write(%struct.x86_emulate_ctxt*, i64, i8*, i32, %struct.x86_exception*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
